fix: responsive gap

--- a/css/album.css
+++ b/css/album.css
@@ -61,6 +61,10 @@ section .container .gallery .box h4 {
 }
 
 @media (max-width: 480px) {
+  section .container .gallery {
+    gap: 30px;
+  }
+
   section .container .gallery .box {
     width: 350px;
     height: 280px;
@@ -73,6 +77,10 @@ section .container .gallery .box h4 {
 }
 
 @media (max-width: 320px) {
+  section .container .gallery {
+    gap: 50px;
+  }
+
   section .container .gallery .box {
     width: 250px;
     height: 180px;
